--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TELEGRAM_TOKEN=8256760343:AAF4WtDfdkfd9PQbSud0ALitr65_aFlpZxw
 GEMINI_API_KEY=AIzaSyAKxqXYGzRESNRG8AmDnMqKCzU0aOVTsnk
-WEBHOOK_URL=https://render-app-url.onrender.com
+
+WEBHOOK_URL=https://nizam_i_siber.onrender.com
